--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/Arena-Bootstrap.github.io/">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/Arena-Bootstrap.github.io/about.html">About</a>
